--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
   <div class="overlay" id="overlay">
     <div class="letter" id="letter">
       <h1>Selamat Ulang Tahun, Irenekamila Putri 🤎</h1>
-        <p>
+   <p>
     Hari ini, dunia terasa lebih indah… karena seseorang yang paling berharga di hidupku dilahirkan.
-    Irene, kamu bukan cuma perempuan cantik dengan senyum dan lesung pipi yang selalu bikin aku jatuh hati,
+    Irenekamila putri, kamu bukan cuma perempuan cantik dengan senyum kamu yang selalu bikin aku jatuh hati,
     tapi juga sosok yang selalu memberi warna di hari-hariku.
   </p>
   <p>
